--- a/README.pot
+++ b/README.pot
@@ -1,40 +1,35 @@
-# Copyright (C) 2014 Personal Admin Footer
-# This file is distributed under the same license as the Personal Admin Footer package.
 msgid ""
 msgstr ""
-"Project-Id-Version: Personal Admin Footer 1.0.1\n"
-"Report-Msgid-Bugs-To: http://wordpress.org/support/plugin/personal-admin-footer\n"
-"POT-Creation-Date: 2014-05-19 09:38:18+00:00\n"
+"Project-Id-Version: \n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2020-05-19 19:02+0100\n"
+"PO-Revision-Date: \n"
+"Last-Translator: Ilya <xxxxxxxxxx@xxxxxxx.xxxxx>\n"
+"Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"PO-Revision-Date: 2014-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
+"X-Poedit-SourceCharset: UTF-8\n"
+"X-Poedit-KeywordsList: __;_e;_n;_t\n"
+"X-Textdomain-Support: yes\n"
+"X-Poedit-Basepath: .\n"
+"X-Generator: Poedit 1.5.7\n"
 
-#: personal-admin-footer.php:27
-msgid "Thank you for creating with <a href=\"http://wordpress.org/\">WordPress</a>."
+#: /views/partials/case-band.j2:6 /views/partials/case-band.j2:7
+msgctxt "Test text"
+msgid "A screenshot of a website using AMP."
+msgstr "The city looks so pretty"
+
+#: /views/partials/format-visuals/websites.j2:10
+msgctxt "01"
+msgid ""
+msgstr "A screenshot showing amp-sidebar."
+
+#: /views/partials/format-visuals/websites.j2:7
+msgid "A website screenshot."
 msgstr ""
 
-#: personal-admin-footer.php:28
-msgid "Thank you for visiting <a href=\"%1$s\">%2$s</a>."
-msgstr ""
-#. Plugin Name of the plugin/theme
-msgid "Personal Admin Footer"
-msgstr ""
-
-#. Plugin URI of the plugin/theme
-msgid "http://bungeshea.com/plugins/personal-admin-footer/"
-msgstr ""
-
-#. Description of the plugin/theme
-msgid "Changes the default 'Thank you for creating with WordPress' in your footer area to a more personal 'Thank you for visiting My Site' on all admin pages except the Network Admin."
-msgstr ""
-
-#. Author of the plugin/theme
-msgid "Shea Bunge"
-msgstr ""
-
-#. Author URI of the plugin/theme
-msgid "http://bungeshea.com"
+#: /views/partials/footer.j2:74
+msgid "AMP Brand Materials"
 msgstr ""
